--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+	box-sizing: border-box;
+}
+*, *:before, *:after {
+	box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	min-height: 100vh;
+	background: #282c34;
+	text-align: center;
+	padding: 20px 0 40px 0;
+	font-size: 16px;
+	color: #fff;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+a {
+	color: #fff;
+}
+
+a:hover {
+	color: #fff;
+}
+
+.attribution {
+	margin-bottom: 20px;
+	color: #ccc;
+	font-size: 14px;
+	opacity: 0.5;
+	transition: opacity 0.4s linear;
+	display: inline-block;
+}
+
+.attribution:hover {
+	opacity: 1;
+}
+
+.wind-direction {
+	display: inline-block;
+	margin-left: 3px;
+}
+
+.weather-output {
+	width: 100%;
+	overflow-x: scroll;
+}
+
+.weather-output .list-group-item {
+	background: rgba(255,255,255, 0.3);
+	width: 200px;
+	white-space: nowrap;
 }
